stepCounter should works but not on the device i am testing on (has no Sensor for it)
